--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -1,4 +1,8 @@
 // Place all the styles related to the dashboard controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-# @import "bootstrap";
+// @import "bootstrap";
+
+#panel-restaurant-name {
+  font-size: 24px;
+}
